# tasker

./: .gitignore  .gitlab-ci.yml  .release-plz.toml  CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
lib-tasker/: Cargo.toml  README.md
lib-tasker/src/: error.rs  lib.rs
lib-tasker/src/io/: mod.rs
lib-tasker/src/todos/: mod.rs  tasks.rs
tasker-cli/: Cargo.toml  README.md
tasker-cli/src/: execution.rs  lib.rs  main.rs
tasker-cli/src/cli/: execution.rs  interface.rs  mod.rs
tasker-cli/src/config/: mod.rs
tasker-cli/src/execution/: helpers.rs  mod.rs
tasker-cli/wix/: main.wxs
tasker-lib/: Cargo.toml  README.md
tasker-lib/src/: error.rs
tasker-lib/src/io/: mod.rs
tasker-lib/src/tasks/: mod.rs
tasker-lib/src/todos/: mod.rs  tasks.rs
