[workspace]
resolver = "2"
members = ["tasker-cli", "lib-tasker"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
