[workspace]
resolver = "2"
members = ["tasker-cli", "lib-tasker"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
