[package]
name = "lib-tasker"
version = "2.0.1"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["todo", "app", "cli"]
license = "GPL-3.0-or-later"
readme = true
repository = "https://github.com/DavoReds/tasker"
description = "Library for Tasker applications"
rust-version = "1.67.1"

[dependencies]
camino = { workspace = true }
directories = "5.0.1"
ron = "0.8.1"
serde = { workspace = true }
str_slug = "0.1.3"
thiserror = "1.0.58"
toml = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
