[package]
name = "tasker-cli"
version = "2.0.0"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["todo", "app", "cli"]
license = "GPL-3.0-or-later"
readme = true
repository = "https://gitlab.com/DavoReds/tasker"
description = "A To-Do CLI application for managing your daily Tasks."
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.81"
camino = { workspace = true }
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
lib-tasker = { path = "../lib-tasker", version = "2.0.0" }
owo-colors = "4.0.0"
serde = { workspace = true }
toml = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
