[package]
name = "tasker-cli"
version = "2.2.0"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities"]
edition = "2021"
keywords = ["todo", "app", "cli"]
license = "GPL-3.0-or-later"
readme = true
repository = "https://github.com/DavoReds/tasker"
description = "A To-Do CLI application for managing your daily Tasks."
rust-version = "1.70.0"

[package.metadata.wix]
upgrade-guid = "84834A60-D585-4FFF-BD7C-05CE61FB8A52"
path-guid = "7FB6F14F-4A12-4546-BB88-8AEDA4773F57"
license = false
eula = false

[dependencies]
anyhow = "1.0.86"
camino = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
indexmap = { workspace = true }
itertools = "0.13.0"
lib-tasker = { path = "../lib-tasker", version = "2.2.0" }
owo-colors = "4.0.0"
serde = { workspace = true }
toml = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
