[package]
name = "tasker-lib"
version = "0.1.0"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
description = "Library for Tasker applications"
readme = true
repository = "https://github.com/DavoReds/tasker"
license = "GPL-3.0-or-later"
keywords = ["todo", "app", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
str_slug = "0.1.3"
directories = "5.0.1"
ron = "0.8.1"
thiserror = "1.0.50"
toml = "0.8.8"
camino = { version = "1.1.6", features = ["serde1"] }
